--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -263,10 +263,10 @@
     text-align: center;
 }
 
-.table_list .list_info.active {
+/* .table_list .list_info.active {
     background: #4280CB;
     color: #fff;
-}
+} */
 
 
 .infoLog,
