--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -22,7 +22,7 @@
 
 .images-panel {
     height: 240px;
-    width: 20%;
+    width: 21%;
     border: 1px solid #E5E5E5;
     border-radius: 2px;
     position: relative;
@@ -93,7 +93,7 @@
     opacity: 0;
     width: 100%;
     overflow: hidden;
-    height: 150px;
+    height: 170px;
     background: rgba(84,84,84,.5);
     text-align: center;
     position: absolute;
@@ -392,5 +392,8 @@
 	margin-top:18px;
 	padding-left: 20px;
 	padding-right: 20px;
+}
+#newimageList{
+	margin-top:50px;
 }
 
