修改引入外部服务 去掉编辑按钮 功能加载名称上

--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -1,4 +1,4 @@
-/* 蓝色 #3C7BCA 红色 #e8504f 背景circle蓝 #418ac7*/
+/* 蓝色 #3C7BCA 红色 #e8504f 黄#efa421 背景circle蓝 #418ac7*/
 .layui-layer-btn .layui-layer-btn0{
 	background: #e8504f !important;
 	border-color: #e8504f!important;
