--- a/src/main/resources/static/css/core/layout.css
+++ b/src/main/resources/static/css/core/layout.css
@@ -5,8 +5,9 @@
     z-index: 69; 
     position: fixed;
     top: 0px;
+    background-color:#F5F6F6;
     /* box-shadow: 0 1px 10px #33414E; */
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.15);
+    /* box-shadow: 0px 0px 10px rgba(0,0,0,0.15); */
 }
 
 .navbar .container {
