--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -9,7 +9,7 @@
     font-size: 13px;
 }
 .search .search-img {
-    height: 45px;
+    height: 40px;
     width: 80%;
 }
 
@@ -408,3 +408,33 @@
     margin-top:10%;
 }
 
+#searchImages{
+	margin-left: -38px;
+    font-size: 20px;
+    color: #ccc;
+}
+.searchCondition{
+    line-height: 40px;
+    height: 40px;
+}
+#searchCon{
+	margin-left: 22px;
+    width: 90%;
+}
+.searchLabel{
+	line-height: 40px;
+    height: 40px;
+    text-align: right;
+    padding-right:0px;
+}
+.searchImageVersion{
+	width:70%;
+	display:block;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+	float:left;
+}
+.fa-cloud-download span{
+	padding-left:4px;
+}
