--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -435,6 +435,9 @@
     text-overflow:ellipsis;
 	float:left;
 }
+span.cloudNum{
+	padding-left:4px;
+}
 .fa-cloud-download span{
 	padding-left:4px;
 }
