--- a/src/main/resources/static/css/mod/bcm-pandect.css
+++ b/src/main/resources/static/css/mod/bcm-pandect.css
@@ -21,7 +21,7 @@
     background: #EFF2F7;
     /* background: rgba(238,102,102,0.75); */
     
-    border-bottom: 1px solid #EFF2F7;
+    border-bottom: 1px solid #ccc;
     padding-left: 30px;
     font-size: 16px;
 }
@@ -190,3 +190,22 @@ img.pandect-icon{
     color: #fff;
     padding: 10px;
 }
+/* admin总览 */
+.usersInfoTit th,td{
+	text-align: center;
+}
+.usersResourceInfo{
+	width: 100%;
+	height: auto;
+}
+.usersResourceInfo table{
+	width:98%;
+	margin:0 auto;
+}
+.u-line{
+	border-bottom:1px solid #ddd;
+}
+
+
+
+
