--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -428,7 +428,7 @@
     text-align: right;
     padding-right:0px;
 }
-.searchImageVersion{
+.searchImageVersion ,.imageCenter-name{
 	width:70%;
 	display:block;
     white-space:nowrap;
