admin总览界面租户信息

--- a/src/main/resources/static/css/mod/bcm-pandect.css
+++ b/src/main/resources/static/css/mod/bcm-pandect.css
@@ -202,9 +202,10 @@ img.pandect-icon{
 	width:98%;
 	margin:0 auto;
 }
-.u-line{
+.u-line,.usersResourceTable{
 	border-bottom:1px solid #ddd;
 }
+
 
 
 
