--- a/src/main/resources/static/css/mod/home.css
+++ b/src/main/resources/static/css/mod/home.css
@@ -93,7 +93,8 @@
     width: 100%;
 }
 .app-list .icon-view .icon-wrapper {
-    background-color: rgba(255,255,255,.2);
+	background-color: #fff;
+    /* background-color: rgba(255,255,255,.2); */
     border-radius: 25px;
     box-shadow: 0 5px 20px rgba(0,0,0,.1);
 }
