--- a/src/main/resources/static/css/mod/user.css
+++ b/src/main/resources/static/css/mod/user.css
@@ -117,7 +117,7 @@
 .modalCrealApp .steps-main .progre .radius_step {
     color: #999;
     height: 45px;
-    width: 33%;
+    width: 50%;
     float: left;
     border-bottom: 2px solid #e2e2e4;
 }
@@ -984,11 +984,13 @@ i.pushOrg {
 	margin-right: 10px;
 	margin-left:20px;
 }
-#preferSave{
+.preferSave{
 	margin-top: 30px;
 	margin-left: 60px;
 }
-
+.sonardiv{
+	width:100%;
+}
 .sonarInfo .sonarCheckbox{
 	width: 75%;
     float: right;
@@ -999,6 +1001,38 @@ i.pushOrg {
 .sonarInfo .sonarCheckbox input{
 	margin-top: 12px;
     margin-right: 6px;
+}
+.left{
+	float:left;
+}
+.labelInfo,.whiteLists .fa-trash{
+	line-height:35px;
+}
+.sonarInfo select{
+	width: 30%; 
+	display: inline; 
+	float: left;
+	margin-left:15px;
+}
+.whiteList{
+	width:92%;
+	margin-left:0px!important;
+	margin-top:6px;
+	float:left;
+}
+.alertInfo{
+	line-height:40px;
+}
+.whiteLists .fa-trash{
+	line-height:35px;
+	margin-top:6px;
+	width:6%;
+}
+.tokenValue{
+	width:60%;
+	margin-left:42px!important;
+	margin-top:6px;
+	float:left;
 }
 
 
