修改白名单设置界面201702151544

--- a/src/main/resources/static/css/mod/user.css
+++ b/src/main/resources/static/css/mod/user.css
@@ -1015,8 +1015,14 @@ i.pushOrg {
 	margin-left:15px;
 }
 .whiteList{
-	width:92%;
+	width:74%;
 	margin-left:0px!important;
+	margin-top:6px;
+	float:left;
+}
+.branchList{
+	width:14%;
+	margin-left:2px!important;
 	margin-top:6px;
 	float:left;
 }
