--- a/src/main/resources/static/css/mod/home.css
+++ b/src/main/resources/static/css/mod/home.css
@@ -49,7 +49,7 @@
 	
 }
 .funTabRight{
-	width:300px;
+	width:25%;
 	height:248px;
 	border-right:1px solid #dadada;
 	margin-left: 100px;
@@ -60,7 +60,7 @@
 	color:#fff;
 }
 .tabBtn{
-	width: 204px;
+	width: 60%;
     height: 40px;
     line-height: 40px;
     text-align: center;
@@ -68,7 +68,7 @@
     margin-top:8px;
 }
 .funTabLeft{
-	width:600px;
+	width:50%;
 	height:200px;
 	margin-left: 100px;
     margin-top: 80px;
@@ -143,7 +143,7 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 366px;
+    /* top: 366px; */
     margin-left: -65px;
     color: #fff;
     font-size: 20px;
