--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Microsoft Yahei";
     font-size: 14px;
-    background: #F5F6F6;
+    background: rgb(251,251,251);
 }
 
 /*div, ul, ol, p, h1, h2, h3, h4, h5, input, select {
