修改工具集修改界面

--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -751,8 +751,12 @@ td.autocut{
 .dftools li label input{
 	margin-right:4px;
 }
-
-
+.warningInfo{
+	color:#e8504f;
+}
+.warningInfo .fa-warning{
+	margin-right:6px;
+}
 
 
 
