修改滚动条&总览table固定表头&日志detail信息显示201703021546

--- a/src/main/resources/static/css/mod/bcm-menu.css
+++ b/src/main/resources/static/css/mod/bcm-menu.css
@@ -145,10 +145,10 @@ nav.navbar-default{
     margin-bottom: 70px;
 }
 #nav-side{
-	/* height:100%; */ 
-	overflow-y: auto;
+	height:100%; 
+	/* overflow-y: auto; */
 	height: calc(100% - 90px);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 
