--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -793,3 +793,48 @@ i.fa-telnet{
 i.fa-tomcat{
 	background-position: -1px -161px;
 }
+.questionInfoCon{
+ 	padding:10px;
+ 	border:1px solid #ddd;
+ 	display:none;
+ 	margin-left: 25px;
+    width: 92%;
+}
+.fa-questionBtn{
+     line-height: 35px;
+     margin-left: 4px;
+     font-size: 16px;
+     float:right;
+     color:#e8504f;
+}
+.fa-questionCon{
+ 	padding:10px;
+ 	border:1px solid #ddd;
+ 	display:none;
+ 	margin-left: 25px;
+    width: 92%;
+}
+.registryinfo ul.nav ul.dropdown-menu li{
+ 	cursor:pointer;
+}
+.settingfilePath{
+ 	padding-left: 18%;
+}
+.settingfilePath-tit{
+ 	width: 12%;
+     float: left;
+     line-height: 34px;
+}
+.settingfilePath-con{
+ 	width: 84%;
+    float: left;
+}
+
+
+
+
+
+
+
+
+
