自动伸缩弹窗

--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -1192,3 +1192,12 @@ p.portLabel input{
 .ui_tpicker_time_label {
 	padding-left:20px
 }
+.autoFlexInfoInput{
+	margin-top: 10px; 
+	width: 78%;
+	line-height: 30px;
+    border-radius: 5px;
+    border:1px solid #ddd;
+    text-indent:6px;
+}
+
