--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -644,11 +644,12 @@ textarea.c-project-con{
 	margin-top: 12px;
 }
 .labelCred{
-	width: 14%;
-	margin-left: 20px;
+	width: 12%;
+	margin-left: 2%;
 	float: left;
 	line-height:34px;
-
+	text-align:right;
+	padding-right:26px;
 }
 .conCred{
 	width: 77%;
@@ -691,7 +692,7 @@ textarea.c-project-con{
 .jdkCon thead{
 	background: #E4EAEC;
 }
-.jdkName, .jdkPath{
+.addKey, .addVal{
 	width:96%;
 }
 td.autocut{
@@ -793,3 +794,67 @@ i.fa-telnet{
 i.fa-tomcat{
 	background-position: -1px -161px;
 }
+/* shera-add */
+.modalCrealApp .steps-main .progre {
+    width: 100%;
+    border: 0;
+}
+.progre {
+    text-align: center;
+    border-bottom: 2px solid #e2e2e4;
+    width: 570px;
+    margin: 30px auto;
+    height: 45px;
+}
+.modalCrealApp .steps-main .progre .radius_step.action {
+    border-bottom: 2px solid #e8504f;
+    color: #e8504f;
+}
+.modalCrealApp .steps-main .progre .radius_step {
+    color: #999;
+    height: 32px;
+    width: 100%;
+    float: left;
+    border-bottom: 2px solid #e2e2e4;
+}
+
+.radius_step.action span {
+    background: #e8504f;
+}
+.radius_step span {
+    margin: 3px auto;
+    padding: 6px 10px;
+    border-radius: 30px;
+    background: #cbcbcb;
+    color: #fff;
+}
+.conCredIbox{
+	margin-left: 14%;
+	margin-top:15px;
+}
+tfoot tr{
+	height:30px!important;
+	background: #fafafa;
+}
+tfoot tr td{
+	text-align: center;
+    font-size: 14px;
+    color:#3f8ec3;
+    cursor:pointer;
+}
+.lastBtns{
+	width: 89%;
+    margin: 50px auto;
+}
+.sonarsCon{
+	background-color: #fff;
+    padding-top: 20px;
+    border:1px solid #ddd;
+    border-radius:4px;
+}
+.conCredIbox div.ibox{
+	border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+
