--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -659,6 +659,9 @@ textarea.c-project-con{
 	text-align:right;
 	padding-right:26px;
 }
+.spantest{
+	width:14%!important;
+}
 .labelCred1{
 	width: 14%;
 	margin-left: 20px;
