--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -1234,4 +1234,66 @@ i.pushOrg {
 .diffTitle{
 	margin-top:20px;
 }
+.tab-title {
+    width: 100px;
+    height: 48px;
+    line-height: 40px;
+    float: left;
+    margin-top: -18px;
+    border-top: 4px solid #dadada;
+}
+.tab-title h5{
+    font-size: 15px;
+    line-height: 44px;
+}
+.ci-h5 {
+    padding-right: 10px!important;
+    padding-left: 25px!important;
+    cursor: pointer!important;
+}
+.checkResult:hover{
+	text-decoration: underline;
+	cursor:pointer;
+}
+.checkResultDetailInfo .tableInfo, .checkResultDetailInfo .labelInfo{
+	padding: 10px;
+}
+.labelInfo{
+	margin-left:10px;
+}
+.checkResultDetailInfo .tableInfo table tr{
+	border-bottom: 1px solid #ddd;
+}
+.checkResultDiv{
+	max-height:335px;
+	overflow-y:auto;
+}
+/* route */
+#routeList a.fa-caret{
+	padding-right:10px;
+}
+.targetDetail{
+	background-color:#ddd;
+}
+/* dns */
+.timedTaskInfo table tr td{
+	text-indent: 16px;	
+}
+.timedTaskInfo table tr td i.fa-check{
+	float:right;
+	margin-right:15px;
+	font-size:16px;
+	color:#1dd2af;
+	display:none;	
+}
+.domainTable{
+	max-height:240px;
+	overflow-y:auto;
+}
+
+
+
+
+
+
 
