--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -1274,6 +1274,9 @@ i.pushOrg {
 .resultInfo p span:not(:first-child){
 	margin-left:55px;
 }
+.iptableOpr a{
+	cursor:pointer;
+}
 
 /* route */
 #routeList a.fa-caret{
