添加认证弹窗样式修改，密钥详情不能修改，公钥可复制

--- a/src/main/resources/static/css/mod/secretKey.css
+++ b/src/main/resources/static/css/mod/secretKey.css
@@ -10,6 +10,7 @@
 .conCred{
 	width: 76%;
 }
-#userNameCred, #passwordCred{
+#userNameCred, #passwordCred,#userNameCredDetail,#passwordCredDetail{
 	text-indent: 10px;
 }
+
