--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -643,7 +643,7 @@ textarea.c-project-con{
 .infoCred{
 	margin-top: 12px;
 }
-.labelCred,{
+.labelCred{
 	width: 19%;
 	margin-left: 2%;
 	float: left;
