--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -1351,3 +1351,10 @@ font i.fa-question-circle{
 	background-color:#e8504f;
 	color:#fff;
 }
+.link{
+	color:#e8504f;
+}
+.link:hover{
+	text-decoration: underline;
+	cursor:pointer;
+}
