--- a/src/main/resources/static/css/core/dataTables.bootstrap.css
+++ b/src/main/resources/static/css/core/dataTables.bootstrap.css
@@ -58,13 +58,13 @@ table.dataTable thead .sorting {
     
 }
 
-table.dataTable thead .sorting_asc {
+/* table.dataTable thead .sorting_asc {
     background: url('../images/sort_asc.png') no-repeat center right;
 }
 
 table.dataTable thead .sorting_desc {
     background: url('../images/sort_desc.png') no-repeat center right;
-}
+} */
 
 table.dataTable thead .sorting_asc_disabled {
 }
