服务升级&节点管理样式&服务创建修改环境变量和存储卷的添加方式

--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -214,6 +214,13 @@ nav.navbar-downSide{
 #serviceList tr td a.a-live{
 	color:#e8504f;
 }
+.link{
+	color:#e8504f;
+}
+.link:hover{
+	text-decoration: underline;
+	cursor:pointer;
+}
 
 
 
