--- a/src/main/resources/static/css/mod/redis.css
+++ b/src/main/resources/static/css/mod/redis.css
@@ -32,6 +32,12 @@ fieldset table.table{
 fieldset table.table th{
 	width:30%;
 }
+.oneNodeLogsInfo textarea{
+	margin:20px 15px;
+	width:95%;
+	height:500px;
+	border:1px solid #ddd;
+}
 /* redis-detail */
 .progre {
     text-align: center;
@@ -115,5 +121,13 @@ fieldset table.table th{
 }
 .btn-higher, .btn-nohigher{
 	margin-left:18%;
-	margin-top:10px;
+	margin-top:30px;
+}
+.pExplain{
+	color:red; 
+	margin-left:18%;
+	margin-bottom:0px;
+}
+input.conCred[type=text]{
+	text-indent:10px;
 }
